@@ -214,6 +214,7 @@ void *Maskbox(void *argument)
   int nmiss;
   int *vars;
   int i;
+  int ndiffgrids;
   int lat1, lat2, lon11, lon12, lon21, lon22;
   double missval;
   double *array;
@@ -232,6 +233,11 @@ void *Maskbox(void *argument)
   vlistID1 = streamInqVlist(streamID1);
 
   ngrids = vlistNgrids(vlistID1);
+  ndiffgrids = 0;
+  for ( index = 1; index < ngrids; index++ )
+    if ( vlistGrid(vlistID1, 0) != vlistGrid(vlistID1, index))
+      ndiffgrids++;
+
   for ( index = 0; index < ngrids; index++ )
     {
       gridID   = vlistGrid(vlistID1, index);
@@ -246,7 +252,7 @@ void *Maskbox(void *argument)
     cdoAbort("Gaussian reduced grid found. Use option -R to convert it to a regular grid!");
 
   if ( index == ngrids ) cdoAbort("No regular grid found!");
-  if ( ngrids > 1 )      cdoAbort("Too much different grids!");
+  if ( ndiffgrids > 0 )  cdoAbort("Too many different grids!");
 
   operatorInputArg(cdoOperatorEnter(operatorID));
 
