@@ -280,6 +280,7 @@ void *Sethalo(void *argument)
   int *vars;
   int i;
   int lhalo, rhalo;
+  int ndiffgrids;
   double missval;
   double *array1 = NULL, *array2 = NULL;
   int taxisID1, taxisID2;
@@ -292,6 +293,11 @@ void *Sethalo(void *argument)
   vlistID1 = streamInqVlist(streamID1);
 
   ngrids = vlistNgrids(vlistID1);
+  ndiffgrids = 0;
+  for ( index = 1; index < ngrids; index++ )
+    if ( vlistGrid(vlistID1, 0) != vlistGrid(vlistID1, index))
+      ndiffgrids++;
+
   for ( index = 0; index < ngrids; index++ )
     {
       gridID1  = vlistGrid(vlistID1, index);
@@ -306,7 +312,7 @@ void *Sethalo(void *argument)
     cdoAbort("Gaussian reduced grid found. Use option -R to convert it to a regular grid!");
 
   if ( index == ngrids ) cdoAbort("No regular grid found!");
-  if ( ngrids > 1 )      cdoAbort("Too much different grids!");
+  if ( ndiffgrids > 0 )  cdoAbort("Too many different grids!");
 
   operatorInputArg("left and right halo");
   gridID2 = genindexgrid(gridID1, &lhalo, &rhalo);
