@@ -151,7 +151,7 @@ void namelistAdd(NAMELIST *nml, const char *name, int type, int dis, void *ptr, 
 
   if ( nml->size >= MAX_NML_ENTRY )
     {
-      fprintf(stderr, "Too much namelist entries in %s! (Max = %d)\n", nml->name, MAX_NML_ENTRY);
+      fprintf(stderr, "Too many namelist entries in %s! (Max = %d)\n", nml->name, MAX_NML_ENTRY);
       return;
     }
 
